--- a/final.html
+++ b/final.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Je t’aime ❤️</title>
+<link rel="shortcut icon" href="img/logo.png" type="image">
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,8 +12,8 @@
 <div class="love-final show">
 
   <img src="img/nous-deux.jpeg" class="final-photo">
-  <h1>JE T’AIME ❤️</h1>
-  <p>Merci d’être dans ma vie, tu es mon plus beau bonheur 💕</p>
+  <h1>JE T’AIME MON AMOUR ❤️</h1>
+  <p>Merci d’être dans ma vie Aglaé, tu es mon plus beau bonheur, Ma plus grande fiérté, j'ai hâte de la suite avec toi 💕</p>
 
    <div class="big-heart">💖</div>
 
@@ -21,6 +22,11 @@
   <canvas id="confettiCanvas"></canvas>
 
 </div>
+
+<footer>
+    © <span id="year">2026</span> Rafael Compagny — Micro-entreprise · Tous droits réservés<br>
+    <a href="photo.html" target="_blank">Si tu veux voir le logo et les crédits, clique</a>
+</footer>
 
 <script src="valentine.js"></script>
 <script>startConfetti();</script>
