--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>💖 Notre Histoire 💖</title>
+  <link rel="shortcut icon" href="img/logo.png" type="image">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -70,6 +71,12 @@
     allow="autoplay; encrypted-media">
   </iframe>
 </div>
+
+<footer>
+    © <span id="year">2026</span> Rafael Compagny — Micro-entreprise · Tous droits réservés<br>
+    <a href="photo.html" target="_blank">Si tu veux voir le logo et les crédits, clique</a>
+</footer>
+
 
 <!-- Scripts -->
 <script src="hearts.js"></script>
