--- a/photo.html
+++ b/photo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Une question 💖</title>
+<title>crédit 💖</title>
   <link rel="shortcut icon" href="img/logo.png" type="image">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,13 +12,10 @@
 <div class="overlay"></div>
 
 <div class="center-screen">
-  <h2>Veux-tu être ma Valentine ? 💖</h2>
-  <div class="choices">
-    <button id="yesBtn">
-        <span class="yes-inner">OUI ❤️</span>    
-    </button>
-    <button id="noBtn">NON 😈</button>
-  </div>
+  <h2>Créé, coder et développer par : Rafaël GRANERO.</h2>
+  <h2>Fait par © Rafael Compagny</h2>
+  <h2>Pour Aglaé De Sousa</h2>
+  <h2>Le logo : </h2> <img src="img/logo.png">
 </div>
 
 <footer>
@@ -27,7 +24,6 @@
 </footer>
 
 <script src="hearts.js"></script>
-<script src="valentine.js"></script>
 
 
 </body>
