--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>💖 Notre Histoire 💖</title>
   <link rel="shortcut icon" href="img/logo.png" type="image">
   <link rel="stylesheet" href="style.css">
+  <meta name="theme-color" content="#ff5f7e">
 </head>
 
 <body>
